--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div id=para>
             <p>
-                Hi, my name is Lucas. I’m currently in the third year of pursuing a Bachelor of Science degree at the University of Auckland majoring in Computer Science and Logic Computation.
+                Hi, my name is Lucas. I’m currently in the third year of pursuing a Bachelor of Science degree at the University of Auckland majoring in Computer Science and Computational Logic.
             </p>
             <p>
                 I'm very fascinated by technology and science. I'm also passionate for psychology, philosophy and fashion.
