--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
 <footer>
     <ul>
         <li class=media>
-            <a href="https://www.linkedin.com/in/lucasli233/" class="fa fa-linkedin" aria-hidden="true" style="color:white">
+            <a href="https://www.linkedin.com/in/lucasli233/" class="fa fa-linkedin" aria-hidden="true">
             </a>
         </li>
         <li class=media>
-            <a href="https://github.com/Oblivion233/" class="fa fa-github" aria-hidden="true" style="color:white">
+            <a href="https://github.com/Oblivion233/" class="fa fa-github" aria-hidden="true">
             </a>
         </li>
         <li class=media>
-            <a href="https://www.facebook.com/LucasShengqiLi/" class="fa fa-facebook-official" aria-hidden="true " style="color:white">
+            <a href="https://www.facebook.com/LucasShengqiLi/" class="fa fa-facebook-official" aria-hidden="true ">
             </a>
         </li>
         <li class=media>
-            <a href="https://www.instagram.com/lucass.li_/" class="fa fa-instagram" aria-hidden="true " style="color:white">
+            <a href="https://www.instagram.com/lucass.li_/" class="fa fa-instagram" aria-hidden="true ">
             </a>
         </li>
         <li class=media>
-            <a href="mailto:sli.lucas233@gmail.com" class="fa fa-envelope-o" aria-hidden="true " style="color:white">
+            <a href="mailto:sli.lucas233@gmail.com" class="fa fa-envelope-o" aria-hidden="true ">
             </a>
         </li>
     </ul>
