--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 I am Lucas. Currently in the third year of pursuing a Bachelor of Science degree at the University of Auckland majoring in Computer Science and Computational Logic.
             </p>
             <p>
-                I'm very fascinated by technology and science. I'm also passionate for psychology, philosophy and fashion.
+                I'm very fascinated by technology and science.<br> I'm also passionate for psychology, philosophy, cinema, music, and fashion.
             </p>
             <p>
                 You can read more about me <a href="General_CV.pdf" download="LucasLiResume"><u>here</u></a>.
