--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div>
 
-        <div id=para>
+        <div class=para>
             <p>
                 I am Lucas. Currently in the third year of pursuing a Bachelor of Science degree at the University of Auckland majoring in Computer Science and Computational Logic.
             </p>
@@ -25,31 +25,31 @@
                 I'm very fascinated by technology and science.<br> I'm also passionate for psychology, philosophy, cinema, music, and fashion.
             </p>
             <p>
-                You can read more about me <a href="General_CV.pdf" download="LucasLiResume"><u>here</u></a>.
+                You can read more about me <a class="cv" href="General_CV.pdf" download="LucasLiResume"><u>here</u></a>.
             </p>
         </div>
     </div>
 </body>
 <footer>
-    <ul>
-        <li class=media>
-            <a href="https://www.linkedin.com/in/lucasli233/" class="fa fa-linkedin" aria-hidden="true">
+    <ul class=media>
+        <li class=circle>
+            <a href="https://www.linkedin.com/in/lucasli233/" class="fa fa-linkedin">
             </a>
         </li>
-        <li class=media>
-            <a href="https://github.com/Oblivion233/" class="fa fa-github" aria-hidden="true">
+        <li class=circle>
+            <a href="https://github.com/Oblivion233/" class="fa fa-github">
             </a>
         </li>
-        <li class=media>
-            <a href="https://www.facebook.com/LucasShengqiLi/" class="fa fa-facebook-official" aria-hidden="true ">
+        <li class=circle>
+            <a href="https://www.facebook.com/LucasShengqiLi/" class="fa fa-facebook-official">
             </a>
         </li>
-        <li class=media>
-            <a href="https://www.instagram.com/lucass.li_/" class="fa fa-instagram" aria-hidden="true ">
+        <li class=circle>
+            <a href="https://www.instagram.com/lucass.li_/" class="fa fa-instagram">
             </a>
         </li>
-        <li class=media>
-            <a href="mailto:sli.lucas233@gmail.com" class="fa fa-envelope-o" aria-hidden="true ">
+        <li class=circle>
+            <a href="mailto:sli.lucas233@gmail.com" class="fa fa-envelope-o">
             </a>
         </li>
     </ul>
