--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div>
 
         <div class=para>
-            <p>
+            <p class="p 1">
                 I am Lucas. Currently in the third year of pursuing a Bachelor of Science degree at the University of Auckland majoring in Computer Science and Computational Logic.
             </p>
-            <p>
+            <p class="p 2">
                 I'm very fascinated by technology and science.<br> I'm also passionate for psychology, philosophy, cinema, music, and fashion.
             </p>
-            <p>
+            <p class="p 3">
                 You can read more about me <a class="cv" href="General_CV.pdf" download="LucasLiResume"><u>here</u></a>.
             </p>
         </div>
