--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div>
       <div class="para">
         <p class="p 1">
-          I am Lucas. Currently in the third year of pursuing a Bachelor of
+          I am NOT Lucas. Currently in the third year of pursuing a Bachelor of
           Science degree at the University of Auckland majoring in Computer
           Science and Computational Logic.
         </p>
