--- a/index.html
+++ b/index.html
@@ -1,71 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
 
-    <title>Lucas Li</title>
-    <h1>Lucas Li</h1>
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 
-    <img src="IMG_3917.JPG" alt="idphoto" />
+  <title>Lucas Li</title>
+  <h1>Lucas Li</h1>
 
-    <h2>Third Year CompSci student at UoA</h2>
-  </head>
+  <img src="IMG_3917.JPG" alt="idphoto" />
 
-  <body>
-    <div>
-      <div class="para">
-        <p class="p 1">
-          I am NOT Lucas. Currently in the third year of pursuing a Bachelor of
-          Science degree at the University of Auckland majoring in Computer
-          Science and Computational Logic.
-        </p>
-        <p class="p 2">
-          I'm very fascinated by technology and science.<br />
-          I'm also passionate for psychology, philosophy, cinema, music, and
-          fashion.
-        </p>
-        <p class="p 3">
-          You can read more about me
-          <a class="cv" href="General_CV.pdf" download="LucasLiResume"
-            ><u>here</u></a
-          >.
-        </p>
-      </div>
+  <h2>Third Year CompSci student at UoA</h2>
+</head>
+
+<body>
+  <div>
+    <div class="para">
+      <p class="p 1">
+        I am Lucas. Currently in the third year of pursuing a Bachelor of
+        Science degree at the University of Auckland majoring in Computer
+        Science and Computational Logic.
+      </p>
+      <p class="p 2">
+        I'm very fascinated by technology and science.<br />
+        I'm also passionate for psychology, philosophy, cinema, music, and
+        fashion.
+      </p>
+      <p class="p 3">
+        You can read more about me
+        <a class="cv" href="General_CV.pdf" download="LucasLiResume"><u>here</u></a>.
+      </p>
     </div>
-  </body>
-  <footer>
-    <ul class="media">
-      <li class="circle">
-        <a
-          href="https://www.linkedin.com/in/lucasli233/"
-          class="fa fa-linkedin"
-        >
-        </a>
-      </li>
-      <li class="circle">
-        <a href="https://github.com/Oblivion233/" class="fa fa-github"> </a>
-      </li>
-      <li class="circle">
-        <a
-          href="https://www.facebook.com/LucasShengqiLi/"
-          class="fa fa-facebook-official"
-        >
-        </a>
-      </li>
-      <li class="circle">
-        <a href="https://www.instagram.com/lucass.li_/" class="fa fa-instagram">
-        </a>
-      </li>
-      <li class="circle">
-        <a href="mailto:sli.lucas233@gmail.com" class="fa fa-envelope-o"> </a>
-      </li>
-    </ul>
-  </footer>
+  </div>
+</body>
+<footer>
+  <ul class="media">
+    <li class="circle">
+      <a href="https://www.linkedin.com/in/lucasli233/" class="fa fa-linkedin">
+      </a>
+    </li>
+    <li class="circle">
+      <a href="https://github.com/Oblivion233/" class="fa fa-github"> </a>
+    </li>
+    <li class="circle">
+      <a href="https://www.facebook.com/LucasShengqiLi/" class="fa fa-facebook-official">
+      </a>
+    </li>
+    <li class="circle">
+      <a href="https://www.instagram.com/lucass.li_/" class="fa fa-instagram">
+      </a>
+    </li>
+    <li class="circle">
+      <a href="mailto:sli.lucas233@gmail.com" class="fa fa-envelope-o"> </a>
+    </li>
+  </ul>
+</footer>
+
 </html>
