--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </a>
     </li>
     <li class="circle">
-      <a href="https://github.com/Oblivion233/" class="fa fa-github"> </a>
+      <a href="https://github.com/lucasli233" class="fa fa-github"> </a>
     </li>
     <li class="circle">
       <a href="https://www.facebook.com/LucasShengqiLi/" class="fa fa-facebook-official">
