--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </p>
       <p class="p 3">
         You can read more about me
-        <a class="cv" href="General_CV.pdf" download="LucasLiResume"><u>here</u></a>.
+        <a class="cv" href="general_cv.pdf" download="LucasLiResume"><u>here</u></a>.
       </p>
     </div>
   </div>
